# Matching

./: .Rinstignore  .Rinstignore~  .gitignore  ChangeLog  DESCRIPTION  MD5  NAMESPACE  README.md  README.md~  cleanup  configure  configure.ac
.github/workflows/: check-noncontainerized.yaml
R/: GenBalance.R  GenMatching.R  Matchby.R  Matching.R
data/: GerberGreenImai.rda  lalonde.rda
demo/: 00Index
inst/: CITATION
inst/extras/: ICC  Makevars.win.gcc3  Makevars.win.gcc4  cblas.h  cblas_dasum.c  cblas_dgemm.c  cblas_dscal.c  cblas_dsymm.c  cblas_dtrmm.c  configure.old  configure.win  makefile.cblas  makefile.icc  makefile.in  makefile.osx.in  makefile.sun
man/: GenMatch.Rd  GerberGreenImai.Rd  Match.Rd  MatchBalance.Rd  Matchby.Rd  balanceUV.Rd  ks.boot.Rd  lalonde.Rd  qqstats.Rd  summary.Match.Rd  summary.Matchby.Rd  summary.balanceUV.Rd  summary.ks.boot.Rd
src/: Makevars  Makevars.in  Makevars.win  cblas.h  cblas_dasum.c  cblas_dgemm.c  cblas_dscal.c  init.c  matching.cc  matching.h  scythematrix.cc  scythematrix.h
tests/: AbadieImbens.R  AbadieImbens.Rout.save  DehejiaWahba.R  DehejiaWahba.Rout.save  GenMatch.R  GenMatch.Rout.save  Matchby.R  Matchby.Rout.save  testthat.R
tests/testthat/: setup.R  test-AbadieImbens.R  test-DehejiaWehba.R  test-GenMatch.R  test-MatchBy.R
